Config serveur : changement du port en 8081 et ajout du context-path /GestionDeProjet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=Gestion_Foyer
-spring.datasource.url=jdbc:mysql://localhost:3306/Gestion_FoyerDb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/GestionFoyerDb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8081
+server.servlet.context-path=/GestionFoyer
